Tooltip shows question count and better positioned; TODO: Fix so it doesn't go off screen

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ td {
     color: red;
 }
 
-.tooltip {
+.tooltip, .tooltip-for-heatmap {
     display: none;
     border: 1px solid black;
 }
@@ -142,6 +142,16 @@ span:hover .tooltip {
     margin-top: 10px;
     padding: 5px;
     width: 50%;
+}
+
+span:hover .tooltip-for-heatmap {
+    display: block;
+    position: absolute;
+    background-color: #FFFFF0;
+    margin-right: 15px;
+    margin-top: 10px;
+    padding: 5px;
+    width: 300px;
 }
 
 form > fieldset > label > h2, table > tbody > tr > td > h2 {
